--- a/P5_test.ipynb
+++ b/P5_test.ipynb
@@ -82,17 +82,22 @@
     "\n",
     "\n",
     "# Define a function to return HOG features and visualization\n",
-    "def get_hog_features(img, orient, pix_per_cell, cell_per_block, vis=False, feature_vec=True):\n",
+    "def get_hog_features(img, orient, pix_per_cell, cell_per_block, \n",
+    "                        vis=False, feature_vec=True):\n",
     "    # Call with two outputs if vis==True\n",
     "    if vis == True:\n",
-    "        features, hog_image = hog(img, orientations=orient, pixels_per_cell=(pix_per_cell, pix_per_cell),\n",
-    "                                  cells_per_block=(cell_per_block, cell_per_block), transform_sqrt=True, \n",
+    "        features, hog_image = hog(img, orientations=orient, \n",
+    "                                  pixels_per_cell=(pix_per_cell, pix_per_cell),\n",
+    "                                  cells_per_block=(cell_per_block, cell_per_block), \n",
+    "                                  transform_sqrt=False, \n",
     "                                  visualise=vis, feature_vector=feature_vec)\n",
     "        return features, hog_image\n",
     "    # Otherwise call with one output\n",
     "    else:      \n",
-    "        features = hog(img, orientations=orient, pixels_per_cell=(pix_per_cell, pix_per_cell),\n",
-    "                       cells_per_block=(cell_per_block, cell_per_block), transform_sqrt=True, \n",
+    "        features = hog(img, orientations=orient, \n",
+    "                       pixels_per_cell=(pix_per_cell, pix_per_cell),\n",
+    "                       cells_per_block=(cell_per_block, cell_per_block), \n",
+    "                       transform_sqrt=False, \n",
     "                       visualise=vis, feature_vector=feature_vec)\n",
     "        return features\n",
     "    \n",
@@ -100,7 +105,7 @@
     "orient = 9\n",
     "pix_per_cell = 8\n",
     "cell_per_block = 2\n",
-    "colorspace = 'YUV' # Can be RGB, HSV, LUV, HLS, YUV, YCrCb\n",
+    "colorspace = 'RGB' # Can be RGB, HSV, LUV, HLS, YUV, YCrCb\n",
     "hog_channel = 0 # Can be 0, 1, 2, or \"ALL\"\n",
     "\n",
     "\n",
@@ -201,9 +206,10 @@
     "            feature_image = cv2.cvtColor(img, cv2.COLOR_RGB2YCrCb)\n",
     "    else: feature_image = np.copy(img)             \n",
     "    # Use cv2.resize().ravel() to create the feature vector\n",
-    "    features = cv2.resize(feature_image, size).ravel() \n",
-    "    # Return the feature vector\n",
-    "    return features\n",
+    "    color1 = cv2.resize(feature_image[:,:,0], size).ravel()\n",
+    "    color2 = cv2.resize(feature_image[:,:,1], size).ravel()\n",
+    "    color3 = cv2.resize(feature_image[:,:,2], size).ravel()\n",
+    "    return np.hstack((color1, color2, color3))\n",
     "\n",
     "\n",
     "img=mpimg.imread(cars[random.randint(0, len(cars)-1)])\n",
@@ -248,48 +254,46 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Define a function to extract features from a list of images\n",
     "# Have this function call bin_spatial() and color_hist()\n",
-    "def extract_features(imgs, \n",
-    "                     cspace='YUV', \n",
-    "                     orient=9, pix_per_cell=8, cell_per_block=2, hog_channel=0,\n",
-    "                     hist_bins=32,bins_range=(0, 256),\n",
-    "                     spatial_size=(32,32),spatial_feat=False, hist_feat=False,hog_feat=True\n",
-    "                    ):\n",
+    "def extract_features(imgs, color_space='RGB', spatial_size=(32, 32),\n",
+    "                        hist_bins=32, orient=9, \n",
+    "                        pix_per_cell=8, cell_per_block=2, hog_channel=0,\n",
+    "                        spatial_feat=True, hist_feat=True, hog_feat=True):\n",
     "    # Create a list to append feature vectors to\n",
     "    features = []\n",
     "    # Iterate through the list of images\n",
     "    for file in imgs:\n",
+    "        file_features = []\n",
     "        # Read in each one by one\n",
     "        image = mpimg.imread(file)\n",
-    "        #image=image*256\n",
-    "        features1=[]\n",
     "        # apply color conversion if other than 'RGB'\n",
-    "        if cspace != 'RGB':\n",
-    "            if cspace == 'HSV':\n",
+    "        if color_space != 'RGB':\n",
+    "            if color_space == 'HSV':\n",
     "                feature_image = cv2.cvtColor(image, cv2.COLOR_RGB2HSV)\n",
-    "            elif cspace == 'LUV':\n",
+    "            elif color_space == 'LUV':\n",
     "                feature_image = cv2.cvtColor(image, cv2.COLOR_RGB2LUV)\n",
-    "            elif cspace == 'HLS':\n",
+    "            elif color_space == 'HLS':\n",
     "                feature_image = cv2.cvtColor(image, cv2.COLOR_RGB2HLS)\n",
-    "            elif cspace == 'YUV':\n",
+    "            elif color_space == 'YUV':\n",
     "                feature_image = cv2.cvtColor(image, cv2.COLOR_RGB2YUV)\n",
-    "            elif cspace == 'YCrCb':\n",
+    "            elif color_space == 'YCrCb':\n",
     "                feature_image = cv2.cvtColor(image, cv2.COLOR_RGB2YCrCb)\n",
     "        else: feature_image = np.copy(image)      \n",
-    "        \n",
+    "\n",
     "        if spatial_feat == True:\n",
-    "            spat_features = bin_spatial(feature_image, size=spatial_size)\n",
-    "            features1.append(spat_features)\n",
+    "            spatial_features = bin_spatial(feature_image, size=spatial_size)\n",
+    "            file_features.append(spatial_features)\n",
     "        if hist_feat == True:\n",
-    "            hist_features = color_hist(feature_image, nbins=hist_bins, bins_range=bins_range)\n",
-    "            features1.append(hist_features)\n",
-    "        if hog_feat==True:\n",
-    "            # Call get_hog_features() with vis=False, feature_vec=True\n",
+    "            # Apply color_hist()\n",
+    "            hist_features = color_hist(feature_image, nbins=hist_bins)\n",
+    "            file_features.append(hist_features)\n",
+    "        if hog_feat == True:\n",
+    "        # Call get_hog_features() with vis=False, feature_vec=True\n",
     "            if hog_channel == 'ALL':\n",
     "                hog_features = []\n",
     "                for channel in range(feature_image.shape[2]):\n",
@@ -301,10 +305,9 @@
     "                hog_features = get_hog_features(feature_image[:,:,hog_channel], orient, \n",
     "                            pix_per_cell, cell_per_block, vis=False, feature_vec=True)\n",
     "            # Append the new feature vector to the features list\n",
-    "            features1.append(hog_features)\n",
-    "        features.append(np.concatenate(features1))\n",
+    "            file_features.append(hog_features)\n",
+    "        features.append(np.concatenate(file_features))\n",
     "    # Return list of feature vectors\n",
-    "    # for the timebeing, only hog features are being returned. \n",
     "    return features"
    ]
   },
@@ -320,12 +323,12 @@
     "orient = 9\n",
     "pix_per_cell = 8\n",
     "cell_per_block = 2\n",
-    "colorspace = 'YUV' # Can be RGB, HSV, LUV, HLS, YUV, YCrCb\n",
-    "hog_channel = 0 # Can be 0, 1, 2, or \"ALL\"\n",
+    "colorspace = 'YCrCb' # Can be RGB, HSV, LUV, HLS, YUV, YCrCb\n",
+    "hog_channel = 'ALL' # Can be 0, 1, 2, or \"ALL\"\n",
     "\n",
-    "cars_features=extract_features(cars,cspace=colorspace, orient=orient, pix_per_cell=pix_per_cell, cell_per_block=cell_per_block, \n",
+    "cars_features=extract_features(cars,color_space=colorspace, orient=orient, pix_per_cell=pix_per_cell, cell_per_block=cell_per_block, \n",
     "                               hog_channel=hog_channel)\n",
-    "notcars_features=extract_features(notcars,cspace=colorspace,orient=orient, pix_per_cell=pix_per_cell, cell_per_block=cell_per_block,\n",
+    "notcars_features=extract_features(notcars,color_space=colorspace,orient=orient, pix_per_cell=pix_per_cell, cell_per_block=cell_per_block,\n",
     "                                  hog_channel=hog_channel)\n",
     "print('Total number of features of cars are     : ' +str(np.array(cars_features).shape))\n",
     "print('Total number of features of non-cars are : ' +str(np.array(notcars_features).shape))"
@@ -351,17 +354,6 @@
     "# Split up data into randomized training and test sets\n",
     "rand_state = np.random.randint(0, 100)\n",
     "X_train, X_test, y_train, y_test = train_test_split(scaled_X, y, test_size=0.2, random_state=rand_state)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "np.array(cars_features).shape"
    ]
   },
   {
@@ -458,11 +450,11 @@
     "            endx = startx + xy_window[0]\n",
     "            starty = ys*ny_pix_per_step + y_start_stop[0]\n",
     "            endy = starty + xy_window[1]\n",
+    "            \n",
     "            # Append window position to list\n",
     "            window_list.append(((startx, starty), (endx, endy)))\n",
     "    # Return the list of windows\n",
     "    return window_list\n",
-    "\n",
     "\n",
     "def single_img_features(img, color_space='RGB', spatial_size=(32, 32),\n",
     "                        hist_bins=32, orient=9, \n",
@@ -509,15 +501,14 @@
     "\n",
     "    #9) Return concatenated array of features\n",
     "    return np.concatenate(img_features)\n",
-    "    #return (img_features)\n",
     "\n",
-    "\n",
+    "# Define a function you will pass an image \n",
     "# and the list of windows to be searched (output of slide_windows())\n",
     "def search_windows(img, windows, clf, scaler, color_space='RGB', \n",
     "                    spatial_size=(32, 32), hist_bins=32, \n",
     "                    hist_range=(0, 256), orient=9, \n",
     "                    pix_per_cell=8, cell_per_block=2, \n",
-    "                    hog_channel='ALL', spatial_feat=True, \n",
+    "                    hog_channel=0, spatial_feat=True, \n",
     "                    hist_feat=True, hog_feat=True):\n",
     "\n",
     "    #1) Create an empty list to receive positive detection windows\n",
@@ -533,7 +524,6 @@
     "                            cell_per_block=cell_per_block, \n",
     "                            hog_channel=hog_channel, spatial_feat=spatial_feat, \n",
     "                            hist_feat=hist_feat, hog_feat=hog_feat)\n",
-    "        #print(np.array(features).shape)\n",
     "        #5) Scale extracted features to be fed to classifier\n",
     "        test_features = scaler.transform(np.array(features).reshape(1, -1))\n",
     "        #6) Predict using your classifier\n",
@@ -543,6 +533,7 @@
     "            on_windows.append(window)\n",
     "    #8) Return windows for positive detections\n",
     "    return on_windows\n",
+    "    \n",
     "    "
    ]
   },
@@ -551,56 +542,6 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "print('good so far...')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "images=glob.glob('test_images/*.jpg')\n",
-    "print(images[0])\n",
-    "#file=images[0]\n",
-    "for file in images:\n",
-    "    image1=(mpimg.imread(file))\n",
-    "    image=np.copy(image1)\n",
-    "    #image = image.astype(np.float32)/255\n",
-    "    windows = slide_window(image, x_start_stop=[None, None], y_start_stop=[400,700], \n",
-    "                    xy_window=(128, 128), xy_overlap=(0.85, 0.85))\n",
-    "\n",
-    "\n",
-    "    window_img = draw_boxes(image, windows, color=(0, 0, 255), thick=6)                    \n",
-    "    plotmyimage(window_img,'search grid on a sample image')\n",
-    "\n",
-    "    colorspace = 'YUV' # Can be RGB, HSV, LUV, HLS, YUV, YCrCb\n",
-    "    orient = 9\n",
-    "    pix_per_cell = 8\n",
-    "    cell_per_block = 2\n",
-    "    hog_channel = 0 # Can be 0, 1, 2, or \"ALL\"\n",
-    "\n",
-    "    hot_windows = search_windows(image1, windows, svc, X_scaler, color_space='YUV', \n",
-    "                        spatial_size=(32,32), hist_bins=32, \n",
-    "                        orient=orient, pix_per_cell=pix_per_cell, \n",
-    "                        cell_per_block=cell_per_block,hog_channel=0,spatial_feat=False, hist_feat=False,hog_feat=True)                       \n",
-    "\n",
-    "    window_img = draw_boxes(image, hot_windows, color=(0, 0, 255), thick=6)                    \n",
-    "    plotmyimage(window_img)\n",
-    "\n",
-    "    plt.imshow(window_img)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -614,13 +555,15 @@
     "    if conv == 'RGB2YUV':\n",
     "        return cv2.cvtColor(img, cv2.COLOR_RGB2YUV)\n",
     "# Define a single function that can extract features using hog sub-sampling and make predictions\n",
+    "\n",
     "def find_cars(img, ystart, ystop, scale, svc, X_scaler, orient, pix_per_cell, cell_per_block, spatial_size, hist_bins):\n",
     "    \n",
     "    draw_img = np.copy(img)\n",
-    "    #img = img.astype(np.float32)/255\n",
     "    boxes=[]\n",
+    "    img = img.astype(np.float32)/255\n",
+    "    \n",
     "    img_tosearch = img[ystart:ystop,:,:]\n",
-    "    ctrans_tosearch = convert_color(img_tosearch, conv='RGB2YUV')\n",
+    "    ctrans_tosearch = convert_color(img_tosearch, conv='RGB2YCrCb')\n",
     "    #ctrans_tosearch = np.copy(img_tosearch)\n",
     "    if scale != 1:\n",
     "        imshape = ctrans_tosearch.shape\n",
@@ -655,8 +598,8 @@
     "            hog_feat1 = hog1[ypos:ypos+nblocks_per_window, xpos:xpos+nblocks_per_window].ravel() \n",
     "            hog_feat2 = hog2[ypos:ypos+nblocks_per_window, xpos:xpos+nblocks_per_window].ravel() \n",
     "            hog_feat3 = hog3[ypos:ypos+nblocks_per_window, xpos:xpos+nblocks_per_window].ravel() \n",
-    "            #hog_features = np.hstack((hog_feat1, hog_feat2, hog_feat3))\n",
-    "            hog_features = np.hstack(hog_feat1)\n",
+    "            hog_features = np.hstack((hog_feat1, hog_feat2, hog_feat3))\n",
+    "            #hog_features = np.hstack((hog_feat1))\n",
     "            xleft = xpos*pix_per_cell\n",
     "            ytop = ypos*pix_per_cell\n",
     "\n",
@@ -668,7 +611,8 @@
     "            hist_features = color_hist(subimg, nbins=hist_bins)\n",
     "\n",
     "            # Scale features and make a prediction\n",
-    "            test_features = X_scaler.transform(np.hstack( hog_features).reshape(1, -1))    \n",
+    "            test_features = X_scaler.transform(np.hstack((spatial_features, hist_features, hog_features)).reshape(1, -1))    \n",
+    "            #test_features = X_scaler.transform(np.hstack((hog_features)).reshape(1, -1))    \n",
     "            #test_features = X_scaler.transform(np.hstack((shape_feat, hist_feat)).reshape(1, -1))    \n",
     "            test_prediction = svc.predict(test_features)\n",
     "            \n",
@@ -679,6 +623,64 @@
     "                cv2.rectangle(draw_img,(xbox_left, ytop_draw+ystart),(xbox_left+win_draw,ytop_draw+win_draw+ystart),(0,0,255),6) \n",
     "                boxes.append(((int(xbox_left), int(ytop_draw+ystart)),(int(xbox_left+win_draw),int(ytop_draw+win_draw+ystart))))\n",
     "    return draw_img, boxes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "images=glob.glob('test_images/*.jpg')\n",
+    "print(images[0])\n",
+    "#file=images[0]\n",
+    "for file in images:\n",
+    "    image1=(mpimg.imread(file))\n",
+    "    image=np.copy(image1)\n",
+    "    #image = image.astype(np.float32)/255\n",
+    "    #windows = slide_window(image, x_start_stop=[None, None], y_start_stop=[400,700], \n",
+    "    #                xy_window=(128, 128), xy_overlap=(0.85, 0.85))\n",
+    "\n",
+    "\n",
+    "    #window_img = draw_boxes(image, windows, color=(0, 0, 255), thick=6)                    \n",
+    "    #plotmyimage(window_img,'search grid on a sample image')\n",
+    "\n",
+    "    colorspace = 'RGB' # Can be RGB, HSV, LUV, HLS, YUV, YCrCb\n",
+    "    orient = 9\n",
+    "    pix_per_cell = 8\n",
+    "    cell_per_block = 2\n",
+    "    hog_channel = 0 # Can be 0, 1, 2, or \"ALL\"\n",
+    "    ystart = 400\n",
+    "    ystop = 656\n",
+    "    scale = 1.5\n",
+    "    spatial_size=(32,32)\n",
+    "    hist_bins=32\n",
+    "    window_img,hot_windows = find_cars(image, ystart, ystop, scale, svc, X_scaler, orient, pix_per_cell, cell_per_block, spatial_size, hist_bins)                   \n",
+    "    plotmyimage(window_img)\n",
+    "\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "np.max(window_img)"
    ]
   },
   {
@@ -920,7 +922,7 @@
     "    heat = np.zeros_like(image[:,:,0]).astype(np.float)\n",
     "    #print(heat)\n",
     "    heat = add_heat(heat, bbox_list)\n",
-    "    heat = apply_threshold(heat, 12)  \n",
+    "    heat = apply_threshold(heat, 2)  \n",
     "\n",
     "    heatmap = np.clip(heat, 0, 255)\n",
     "    # Find final boxes from heatmap using label function\n",
@@ -938,8 +940,8 @@
    "outputs": [],
    "source": [
     "from moviepy.editor import VideoFileClip\n",
-    "test_out_file = 'test_video_out.mp4'\n",
-    "clip_test = VideoFileClip('test_video.mp4')\n",
+    "test_out_file = 'project_video_out.mp4'\n",
+    "clip_test = VideoFileClip('project_video.mp4')\n",
     "clip_test_out = clip_test.fl_image(process_frame)\n",
     "%time clip_test_out.write_videofile(test_out_file, audio=False)"
    ]
